--- a/_posts/Pytorch/2022-02-01-Pytorch(1).md
+++ b/_posts/Pytorch/2022-02-01-Pytorch(1).md
@@ -28,8 +28,8 @@ import numpy as np
 ### 텐서 초기화
 
 ```
-텐서는 여러가지 방법으로 초기화가능
-데이터로 부터 직접 텐서 생성가능.
+텐서는 여러가지 방법으로 초기화 가능
+데이터로 부터 직접 텐서 생성가능
 자료형은 자동으로 유추
 ```
 
@@ -49,7 +49,7 @@ x_np = torch.from_numpy(np_array)
 
 ### 2. 다른 텐서로 부터 생성
 
-override하지 않으면 속성(shape)과 자료형을 유지
+override하지 않으면 속성(shape)과 자료형을 유지한다.
 
 ```python
 x_ones = torch.ones_like(x_data) #x_data의 속성을 유지
